[workspace]
resolver = "2"
members = ["example", "hedge"]

[workspace.package]
version = "1.2.14"
edition = "2024"
authors = ["flowerinthenight <root@flowerinthenight.com>"]
license = "MIT"
repository = "https://github.com/flowerinthenight/hedge-rs"
keywords = ["memberlist", "cluster", "spanner", "leader-election", "distributed-systems"]

[workspace.dependencies]
anyhow = "1.0.100"
base64ct = { version = "1.8.0", features = ["alloc"] }
crossbeam-channel = "0.5.15"
ctrlc = "3.5.1"
env_logger = "0.11.8"
exp_backoff = "0.1.6"
google-cloud-spanner = { package = "gcloud-spanner", version = "1.4.1" }
log = "0.4.29"
num_cpus = "1.17.0"
# We don't depend on rustls, but it's panicking without this.
# https://github.com/rustls/rustls/issues/1938
rustls = { version = "0.23.35", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }
scopeguard = "1.2.0"
spindle_rs = "1.2.25"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
