[package]
name = "hedge_rs"
description = "A cluster membership library built on spindle-rs."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }

[dependencies]
tokio = { workspace = true }
google-cloud-spanner = { workspace = true }
exp_backoff = { workspace = true }
log = { workspace = true }
time = { workspace = true }
scopeguard = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
spindle_rs = { workspace = true }
num_cpus = { workspace = true }
base64ct = { workspace = true }
